--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,55 @@
 .App {
-  text-align: center;
+  width: 100%;
+ display: flex;
+ justify-content: center;
+ flex-direction: column;
+ align-items: center;
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container{
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  /* display: flex;
+  
+ width: 15%; */
+ 
+ 
+  
 }
+.big-image{
+  width:14%;
+  border-radius: 10px;
+  
+  
 
-.App-link {
-  color: #61dafb;
 }
-
+.gallery{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.gallery-all{
+  width: 6.6%;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+  margin: 25px;
+}
+.single
+{
+  width: 100%;
+  height:150px;
+  object-fit: cover;
+  border-radius: 10px;
+  
+  
+  
+  
+  
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
